# MiniEngine

./: .gitignore  CMakeLists.txt  README.md  goals.txt
Assets/Models/PS1_Skull/Animations/: SkeletonIdle.fbx  SkeletonWalking.fbx
Assets/Shaders/: Shader.frag  basic.frag  basic.vert  depth.vert  particle.frag  particle.vert  retro.frag  retro.vert  skinned.vert  skinned_depth.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert
src/Camera/: Camera.cpp  Camera.h
src/Core/: AssetManager.h  Component.h  InputManager.cpp  InputManager.h  MiniEngine.h  MiniEngineApp.cpp  MiniEngineApp.h  SceneManager.cpp  SceneManager.h  main.cpp
src/Core/Components/: ColliderComponent.cpp  ColliderComponent.h  HealthComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  TransformComponent.h
src/Effects/: FogSettings.h
src/Rendering/: AnimationClip.cpp  AnimationClip.h  Animator.cpp  Animator.h  CubemapTexture.cpp  CubemapTexture.h  DynamicMesh.cpp  DynamicMesh.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  OffscreenBuffer.cpp  OffscreenBuffer.h  ParticleEmitter.cpp  ParticleEmitter.h  PointLight.h  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skeleton.cpp  Skeleton.h  Texture.cpp  Texture.h
src/World/: Actor.h  ChunkManager.cpp  ChunkManager.h  EnemyActor.cpp  EnemyActor.h  Entity.cpp  Entity.h  IScene.h  MainMenu.cpp  MainMenu.h  MenuScene.cpp  MenuScene.h  PlayerActor.cpp  PlayerActor.h  Scene.cpp  Scene.h  Scene2D.cpp  Scene2D.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  TerrainChunk.cpp  TerrainChunk.h  TerrainGenerator.cpp  TerrainGenerator.h
src/World/Dungeon/: AStar.cpp  AStar.h  DungeonGenerator.cpp  DungeonGenerator.h  DungeonGrid.cpp  DungeonGrid.h  DungeonMeshBuilder.cpp  DungeonMeshBuilder.h  DungeonRoom.cpp  DungeonRoom.h  DungeonScene.cpp  DungeonScene.h  RoomData.h
